syntax = "proto3";

package sd_backend.dinner_provider;

// DinnerProvider information
message DinnerProvider {
  int32 id = 1;
  string name = 2;
  string address = 3;
  string phone = 4;
  float latitude = 5;
  float longitude = 6;
  string service_time = 7;
  string bonus_info = 8;
  string meal_style = 9;
  int64 create_time = 10;
}

// Request for creating or modifying dinner provider
message DinnerProviderRequest {
  // Optional fields - only provided fields will be updated
  int32 id = 1; // Required for PUT (modify)
  string name = 2;
  string address = 3;
  string phone = 4;
  float latitude = 5;
  float longitude = 6;
  string service_time = 7;
  string bonus_info = 8;
  string meal_style = 9;
}

// Response for dinner provider operations
message DinnerProviderResponse {
  repeated DinnerProvider dinner_providers = 1;
  int32 code = 2;
  string message = 3;
}
